trying to get the finetuning working with llama3 inside a docker container

--- a/Meta-Llama-3-8B-Instruct-GGUF.ipynb
+++ b/Meta-Llama-3-8B-Instruct-GGUF.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "mamba activate llama3\n",
     "\n",
+    "[QuantFactory/Meta-Llama-3-8B-Instruct-GGUF](https://huggingface.co/QuantFactory/Meta-Llama-3-8B-Instruct-GGUF)\n",
+    "\n",
     "#### Friday, April 19, 2024\n",
     "\n",
     "[lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF](https://huggingface.co/lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF)"
@@ -100,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
