--- a/Fine_tune_Llama_3_with_ORPO.ipynb
+++ b/Fine_tune_Llama_3_with_ORPO.ipynb
@@ -1301,7 +1301,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.1.undefined"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
