cognitivecomputations/dolphin-2.9-llama3-8b

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -4,6 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Sunday, April 21, 2024\n",
+    "\n",
+    "Gonna pull down and play with ...\n",
+    "[cognitivecomputations/dolphin-2.9-llama3-8b](https://huggingface.co/cognitivecomputations/dolphin-2.9-llama3-8b)\n",
+    "\n",
     "#### Saturday, April 20, 2024\n",
     "\n",
     "mamba activate llama3\n",
@@ -20,7 +25,9 @@
     "import transformers\n",
     "import torch\n",
     "\n",
-    "model_id = \"meta-llama/Meta-Llama-3-8B\""
+    "model_id = \"meta-llama/Meta-Llama-3-8B\"\n",
+    "\n",
+    "model_id = \"cognitivecomputations/dolphin-2.9-llama3-8b\""
    ]
   },
   {
@@ -57,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91c1739166ad455b88906aefe42ea753",
+       "model_id": "dfc36a0127b64d8a82f31f39134ca07c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +88,8 @@
     "    \"text-generation\", model=model_id, model_kwargs={\"torch_dtype\": torch.bfloat16}, device_map=\"auto\"\n",
     ")\n",
     "\n",
-    "# 231m 5.8s"
+    "# 233m 18.2s \"cognitivecomputations/dolphin-2.9-llama3-8b\"\n",
+    "# 231m 5.8s \"meta-llama/Meta-Llama-3-8B\""
    ]
   },
   {
@@ -126,6 +134,53 @@
     }
    ],
    "source": [
+    "# \"meta-llama/Meta-Llama-3-8B\"\n",
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Apr 21 12:31:50 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
+      "|  0%   59C    P0              N/A /  70W |    398MiB /  2048MiB |      6%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+      "|  0%   35C    P8              11W / 450W |  15854MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      2240      G   /usr/lib/xorg/Xorg                          187MiB |\n",
+      "|    0   N/A  N/A      2507      G   /usr/bin/gnome-shell                         33MiB |\n",
+      "|    0   N/A  N/A      6702      G   ...erProcess --variations-seed-version       84MiB |\n",
+      "|    0   N/A  N/A     85704      G   ...,262144 --variations-seed-version=1       88MiB |\n",
+      "|    1   N/A  N/A      2240      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A     89649      C   ...b/miniforge3/envs/llama3/bin/python    15834MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"cognitivecomputations/dolphin-2.9-llama3-8b\"\n",
     "!nvidia-smi"
    ]
   },
@@ -155,6 +210,36 @@
     }
    ],
    "source": [
+    "# \"meta-llama/Meta-Llama-3-8B\"\n",
+    "pipeline(\"Hey how are you doing today?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rob/miniforge3/envs/llama3/lib/python3.11/site-packages/transformers/generation/utils.py:1132: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': 'Hey how are you doing today? I was hoping to talk to you about something that has been on'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \"cognitivecomputations/dolphin-2.9-llama3-8b\"\n",
     "pipeline(\"Hey how are you doing today?\")"
    ]
   },
@@ -210,15 +295,65 @@
     }
    ],
    "source": [
+    "# \"meta-llama/Meta-Llama-3-8B\"\n",
     "!nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Apr 21 12:33:03 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
+      "|  0%   56C    P0              N/A /  70W |    412MiB /  2048MiB |      9%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+      "|  0%   35C    P8              12W / 450W |  15958MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      2240      G   /usr/lib/xorg/Xorg                          187MiB |\n",
+      "|    0   N/A  N/A      2507      G   /usr/bin/gnome-shell                         33MiB |\n",
+      "|    0   N/A  N/A      6702      G   ...erProcess --variations-seed-version       98MiB |\n",
+      "|    0   N/A  N/A     85704      G   ...,262144 --variations-seed-version=1       88MiB |\n",
+      "|    1   N/A  N/A      2240      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A     89649      C   ...b/miniforge3/envs/llama3/bin/python    15938MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"cognitivecomputations/dolphin-2.9-llama3-8b\"\n",
+    "!nvidia-smi"
+   ]
   }
  ],
  "metadata": {
