start playing with notebooks from meta llama recipies

--- a/YT_Llama_3_8B_Testing.ipynb
+++ b/YT_Llama_3_8B_Testing.ipynb
@@ -127,7 +127,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Tue Apr 30 09:36:36 2024       \n",
+            "Wed May  8 09:02:56 2024       \n",
             "+---------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
             "|-----------------------------------------+----------------------+----------------------+\n",
@@ -136,11 +136,11 @@
             "|                                         |                      |               MIG M. |\n",
             "|=========================================+======================+======================|\n",
             "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
-            "|  0%   58C    P0              N/A /  70W |    412MiB /  2048MiB |      6%      Default |\n",
+            "|  0%   58C    P0              N/A /  70W |    498MiB /  2048MiB |      7%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
-            "| 30%   36C    P8              12W / 450W |     16MiB / 24564MiB |      0%      Default |\n",
+            "| 30%   42C    P5              29W / 450W |     16MiB / 24564MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "                                                                                         \n",
@@ -149,11 +149,12 @@
             "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
             "|        ID   ID                                                             Usage      |\n",
             "|=======================================================================================|\n",
-            "|    0   N/A  N/A      2243      G   /usr/lib/xorg/Xorg                          218MiB |\n",
-            "|    0   N/A  N/A      2508      G   /usr/bin/gnome-shell                         43MiB |\n",
-            "|    0   N/A  N/A      5582      G   ...,262144 --variations-seed-version=1       55MiB |\n",
-            "|    0   N/A  N/A      8484      G   ...erProcess --variations-seed-version       91MiB |\n",
-            "|    1   N/A  N/A      2243      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+            "|    0   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                          240MiB |\n",
+            "|    0   N/A  N/A      2411      G   /usr/bin/gnome-shell                         62MiB |\n",
+            "|    0   N/A  N/A      5506      G   ...erProcess --variations-seed-version       96MiB |\n",
+            "|    0   N/A  N/A     37284      G   ...,262144 --variations-seed-version=1       64MiB |\n",
+            "|    0   N/A  N/A     40663      G   /usr/bin/totem                               30MiB |\n",
+            "|    1   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                            4MiB |\n",
             "+---------------------------------------------------------------------------------------+\n"
           ]
         }
@@ -389,7 +390,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4de604e6d43243dba3ffd44c0df993b9",
+              "model_id": "361d8a142e9a4e89941e895719682a2f",
               "version_major": 2,
               "version_minor": 0
             },
@@ -429,7 +430,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Tue Apr 30 09:36:42 2024       \n",
+            "Wed May  8 09:03:03 2024       \n",
             "+---------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
             "|-----------------------------------------+----------------------+----------------------+\n",
@@ -438,11 +439,11 @@
             "|                                         |                      |               MIG M. |\n",
             "|=========================================+======================+======================|\n",
             "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
-            "|  0%   58C    P0              N/A /  70W |    404MiB /  2048MiB |      7%      Default |\n",
+            "|  0%   58C    P0              N/A /  70W |    449MiB /  2048MiB |      6%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
-            "| 30%   37C    P2              72W / 450W |  20726MiB / 24564MiB |      0%      Default |\n",
+            "| 30%   44C    P2              72W / 450W |  20726MiB / 24564MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "                                                                                         \n",
@@ -451,12 +452,13 @@
             "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
             "|        ID   ID                                                             Usage      |\n",
             "|=======================================================================================|\n",
-            "|    0   N/A  N/A      2243      G   /usr/lib/xorg/Xorg                          218MiB |\n",
-            "|    0   N/A  N/A      2508      G   /usr/bin/gnome-shell                         43MiB |\n",
-            "|    0   N/A  N/A      5582      G   ...,262144 --variations-seed-version=1       55MiB |\n",
-            "|    0   N/A  N/A      8484      G   ...erProcess --variations-seed-version       82MiB |\n",
-            "|    1   N/A  N/A      2243      G   /usr/lib/xorg/Xorg                            4MiB |\n",
-            "|    1   N/A  N/A     35989      C   ...b/miniforge3/envs/llama3/bin/python    20706MiB |\n",
+            "|    0   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                          240MiB |\n",
+            "|    0   N/A  N/A      2411      G   /usr/bin/gnome-shell                         62MiB |\n",
+            "|    0   N/A  N/A      5506      G   ...erProcess --variations-seed-version       46MiB |\n",
+            "|    0   N/A  N/A     37284      G   ...,262144 --variations-seed-version=1       64MiB |\n",
+            "|    0   N/A  N/A     40663      G   /usr/bin/totem                               30MiB |\n",
+            "|    1   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+            "|    1   N/A  N/A     44213      C   ...b/miniforge3/envs/llama3/bin/python    20706MiB |\n",
             "+---------------------------------------------------------------------------------------+\n"
           ]
         }
@@ -540,7 +542,7 @@
             "\n",
             "who are you?<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
             "\n",
-            "Arrrr, me hearty! Me name be Captain Chat, the scurviest chatbot to ever sail the Seven Seas o' Conversation! Me and me trusty crew o' code be here to swab the decks o' yer mind with a treasure trove o' knowledge, and maybe even spin ye a yarn or two. So hoist the colors, me matey, and let's set sail fer a swashbucklin' good time!\n"
+            "Arrrr, me hearty! Me name be Chatbot Charlie, the scurviest chatbot to ever sail the Seven Seas o' Conversation! Me and me trusty algorithms be here to help ye navigate the choppy waters o' communication, findin' the treasure o' knowledge and wisdom that ye seek! So hoist the sails and set course fer a swashbucklin' good time, me matey!\n"
           ]
         }
       ],
@@ -875,8 +877,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 25.7 s, sys: 205 µs, total: 25.7 s\n",
-            "Wall time: 25.7 s\n"
+            "CPU times: user 24.5 s, sys: 1.95 ms, total: 24.5 s\n",
+            "Wall time: 24.5 s\n"
           ]
         }
       ],
@@ -960,8 +962,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 20.6 s, sys: 19.5 ms, total: 20.6 s\n",
-            "Wall time: 20.8 s\n"
+            "CPU times: user 19.8 s, sys: 645 µs, total: 19.8 s\n",
+            "Wall time: 19.8 s\n"
           ]
         }
       ],
@@ -1060,8 +1062,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 22.2 s, sys: 12 ms, total: 22.2 s\n",
-            "Wall time: 22.2 s\n"
+            "CPU times: user 21.1 s, sys: 8.29 ms, total: 21.1 s\n",
+            "Wall time: 21.1 s\n"
           ]
         }
       ],
@@ -1131,8 +1133,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 10.6 s, sys: 3.96 ms, total: 10.6 s\n",
-            "Wall time: 10.6 s\n"
+            "CPU times: user 10.4 s, sys: 140 µs, total: 10.4 s\n",
+            "Wall time: 10.4 s\n"
           ]
         }
       ],
@@ -1224,8 +1226,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 18.8 s, sys: 8.1 ms, total: 18.8 s\n",
-            "Wall time: 18.9 s\n"
+            "CPU times: user 18.2 s, sys: 4.06 ms, total: 18.2 s\n",
+            "Wall time: 18.2 s\n"
           ]
         }
       ],
@@ -1274,8 +1276,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 322 ms, sys: 15 µs, total: 322 ms\n",
-            "Wall time: 321 ms\n"
+            "CPU times: user 323 ms, sys: 0 ns, total: 323 ms\n",
+            "Wall time: 322 ms\n"
           ]
         }
       ],
@@ -1323,8 +1325,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 124 ms, sys: 38 µs, total: 124 ms\n",
-            "Wall time: 124 ms\n"
+            "CPU times: user 124 ms, sys: 2 µs, total: 124 ms\n",
+            "Wall time: 123 ms\n"
           ]
         }
       ],
@@ -1392,8 +1394,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 9.86 s, sys: 0 ns, total: 9.86 s\n",
-            "Wall time: 9.91 s\n"
+            "CPU times: user 9.84 s, sys: 58 µs, total: 9.84 s\n",
+            "Wall time: 9.83 s\n"
           ]
         }
       ],
@@ -1480,9 +1482,9 @@
             "    if await self.run_code(code, result, async_=asy):\n",
             "  File \"/home/rob/miniforge3/envs/llama3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\n",
             "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-            "  File \"/tmp/ipykernel_35989/1512032346.py\", line 1, in <module>\n",
+            "  File \"/tmp/ipykernel_44213/4208357934.py\", line 1, in <module>\n",
             "    generate('Write a story about a Koala playing pool and beating all the camelids.',\n",
-            "  File \"/tmp/ipykernel_35989/2714973803.py\", line 24, in generate\n",
+            "  File \"/tmp/ipykernel_44213/2714973803.py\", line 24, in generate\n",
             "    outputs = pipe(\n",
             "  File \"/home/rob/miniforge3/envs/llama3/lib/python3.11/site-packages/transformers/pipelines/text_generation.py\", line 240, in __call__\n",
             "    return super().__call__(text_inputs, **kwargs)\n",
@@ -1989,8 +1991,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 13.6 s, sys: 32 µs, total: 13.6 s\n",
-            "Wall time: 13.6 s\n"
+            "CPU times: user 13.3 s, sys: 8.01 ms, total: 13.3 s\n",
+            "Wall time: 13.3 s\n"
           ]
         }
       ],
@@ -2055,8 +2057,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 9.14 s, sys: 40 µs, total: 9.14 s\n",
-            "Wall time: 9.14 s\n"
+            "CPU times: user 8.71 s, sys: 4 ms, total: 8.71 s\n",
+            "Wall time: 8.71 s\n"
           ]
         }
       ],
@@ -2171,7 +2173,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 3.62 s, sys: 0 ns, total: 3.62 s\n",
+            "CPU times: user 3.62 s, sys: 34 µs, total: 3.62 s\n",
             "Wall time: 3.62 s\n"
           ]
         }
@@ -2282,8 +2284,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 5.52 s, sys: 3.93 ms, total: 5.52 s\n",
-            "Wall time: 5.52 s\n"
+            "CPU times: user 5.41 s, sys: 4.01 ms, total: 5.41 s\n",
+            "Wall time: 5.41 s\n"
           ]
         }
       ],
@@ -2401,8 +2403,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CPU times: user 8.27 s, sys: 80 ms, total: 8.35 s\n",
-            "Wall time: 8.41 s\n"
+            "CPU times: user 8.26 s, sys: 36 µs, total: 8.26 s\n",
+            "Wall time: 8.26 s\n"
           ]
         }
       ],
@@ -2543,11 +2545,67 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+            "To disable this warning, you can either:\n",
+            "\t- Avoid using `tokenizers` before the fork if possible\n",
+            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "# Run Date: Tuesday, April 30, 2024\n",
-            "# Run Time: 00:04:26\n"
+            "Wed May  8 09:07:15 2024       \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+            "|-----------------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                      |               MIG M. |\n",
+            "|=========================================+======================+======================|\n",
+            "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
+            "|  0%   58C    P0              N/A /  70W |    419MiB /  2048MiB |     11%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
+            "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+            "| 30%   49C    P2             136W / 450W |  20874MiB / 24564MiB |      0%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                            |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+            "|        ID   ID                                                             Usage      |\n",
+            "|=======================================================================================|\n",
+            "|    0   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                          254MiB |\n",
+            "|    0   N/A  N/A      2411      G   /usr/bin/gnome-shell                         42MiB |\n",
+            "|    0   N/A  N/A      5506      G   ...erProcess --variations-seed-version       31MiB |\n",
+            "|    0   N/A  N/A     37284      G   ...,262144 --variations-seed-version=1       37MiB |\n",
+            "|    0   N/A  N/A     40663      G   /usr/bin/totem                               41MiB |\n",
+            "|    1   N/A  N/A      2206      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+            "|    1   N/A  N/A     44213      C   ...b/miniforge3/envs/llama3/bin/python    20854MiB |\n",
+            "+---------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ],
+      "source": [
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "# Run Date: Wednesday, May 08, 2024\n",
+            "# Run Time: 00:04:20\n"
           ]
         }
       ],
